<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            xmlns:app="schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#bd182249"
            app:contentInsetLeft="0dp"
            android:id="@+id/toolbar"
            app:contentInsetStart="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp" >


            <ImageView
                android:id="@+id/imgback"
                android:background="@drawable/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginLeft="25dp"
                android:background="@drawable/crossroads"
                android:layout_width="50dp"
                android:layout_height="50dp" />


            <TextView
                android:id="@+id/txtAppbar"
                android:layout_marginLeft="5dp"
                android:text="RC Thane Premium\nRegister"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </android.support.v7.widget.Toolbar>

        <include layout="@layout/footer"
            android:id="@+id/footer"
            ></include>



    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/footer"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="0dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_memberid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_memberid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="7"
                    android:singleLine="true"
                    android:hint="@string/hint_membeerid" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_below="@+id/input_layout_memberid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_mobile"
                android:layout_below="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:hint="@string/hint_mobile" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:id="@+id/linear"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/input_layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/input_dob"
                    android:text="Select BirthDate Date"
                    android:textSize="16dp"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@+id/input_layout_subvocation"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:typeface="monospace"
                    android:singleLine="true">
                </TextView>


            </LinearLayout>
            <View
                android:id="@+id/view"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_below="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"/>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_age"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="2"
                    android:inputType="number"
                    android:hint="@string/hint_age" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_below="@+id/input_layout_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_below="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:maxLength="6"
                    android:inputType="textPassword" />



            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_orgnname"
                android:layout_below="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_orgnname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="text"
                    android:hint="@string/hint_orgnname" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_classification"
                android:layout_below="@+id/input_layout_orgnname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_classification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_classification" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_vocation"
                android:layout_below="@+id/input_layout_classification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_vocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_vocation" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_subvocation"
                android:layout_below="@+id/input_layout_vocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_subvocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="text"
                    android:hint="@string/hint_subvocation" />
            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/btn_next"
                android:layout_below="@+id/input_layout_subvocation"
                android:layout_gravity="right"
                android:minHeight="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_up"
                android:background="@drawable/button_border"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"/>



        </RelativeLayout>

    </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>